Corrections de l'alignement vertical du titre

--- a/org.rcfaces.renderkit.html/src/org/rcfaces/renderkit/html/internal/css/f_grid.css
+++ b/org.rcfaces.renderkit.html/src/org/rcfaces/renderkit/html/internal/css/f_grid.css
@@ -183,7 +183,7 @@
 	white-space:nowrap;
 	overflow: hidden;
 	vertical-align: middle;
-	line-height: 16px;
+	line-height: 18px;
 	display: block;
 	color: #000;
 	text-decoration: none;
